--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.15.2",
     "knex": "^0.13.0",
+    "method-override": "^2.3.8",
     "morgan": "~1.8.1",
     "pg": "^6.1.5",
     "request": "^2.81.0",
